; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sit.c___ipip6_bucket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sit.c___ipip6_bucket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_tunnel = type { i32 }
%struct.sit_net = type { %struct.ip_tunnel*** }
%struct.ip_tunnel_parm = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ip_tunnel** (%struct.sit_net*, %struct.ip_tunnel_parm*)* @__ipip6_bucket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ip_tunnel** @__ipip6_bucket(%struct.sit_net* %0, %struct.ip_tunnel_parm* %1) #0 {
  %3 = alloca %struct.sit_net*, align 8
  %4 = alloca %struct.ip_tunnel_parm*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.sit_net* %0, %struct.sit_net** %3, align 8
  store %struct.ip_tunnel_parm* %1, %struct.ip_tunnel_parm** %4, align 8
  %9 = load %struct.ip_tunnel_parm*, %struct.ip_tunnel_parm** %4, align 8
  %10 = getelementptr inbounds %struct.ip_tunnel_parm, %struct.ip_tunnel_parm* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %5, align 8
  %13 = load %struct.ip_tunnel_parm*, %struct.ip_tunnel_parm** %4, align 8
  %14 = getelementptr inbounds %struct.ip_tunnel_parm, %struct.ip_tunnel_parm* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %17 = load i64, i64* %5, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %2
  %20 = load i32, i32* %8, align 4
  %21 = or i32 %20, 2
  store i32 %21, i32* %8, align 4
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @HASH(i64 %22)
  %24 = load i32, i32* %7, align 4
  %25 = xor i32 %24, %23
  store i32 %25, i32* %7, align 4
  br label %26

26:                                               ; preds = %19, %2
  %27 = load i64, i64* %6, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %26
  %30 = load i32, i32* %8, align 4
  %31 = or i32 %30, 1
  store i32 %31, i32* %8, align 4
  %32 = load i64, i64* %6, align 8
  %33 = call i32 @HASH(i64 %32)
  %34 = load i32, i32* %7, align 4
  %35 = xor i32 %34, %33
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %29, %26
  %37 = load %struct.sit_net*, %struct.sit_net** %3, align 8
  %38 = getelementptr inbounds %struct.sit_net, %struct.sit_net* %37, i32 0, i32 0
  %39 = load %struct.ip_tunnel***, %struct.ip_tunnel**** %38, align 8
  %40 = load i32, i32* %8, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.ip_tunnel**, %struct.ip_tunnel*** %39, i64 %41
  %43 = load %struct.ip_tunnel**, %struct.ip_tunnel*** %42, align 8
  %44 = load i32, i32* %7, align 4
  %45 = zext i32 %44 to i64
  %46 = getelementptr inbounds %struct.ip_tunnel*, %struct.ip_tunnel** %43, i64 %45
  ret %struct.ip_tunnel** %46
}

declare dso_local i32 @HASH(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
